pkg/parser/fql/fql_parser.go
// Code generated from antlr/FqlParser.g4 by ANTLR 4.10.1. DO NOT EDIT.

package fql // FqlParser
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type FqlParser struct {
	*antlr.BaseParser
}

var fqlparserParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	literalNames           []string
	symbolicNames          []string
	ruleNames              []string
	predictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func fqlparserParserInit() {
	staticData := &fqlparserParserStaticData
	staticData.literalNames = []string{
		"", "", "", "", "", "':'", "';'", "'.'", "','", "'['", "']'", "'('",
		"')'", "'{'", "'}'", "'>'", "'<'", "'=='", "'>='", "'<='", "'!='", "'*'",
		"'/'", "'%'", "'+'", "'-'", "'--'", "'++'", "", "", "", "'='", "'?'",
		"'!~'", "'=~'", "'FOR'", "'RETURN'", "'WAITFOR'", "'DISPATCH'", "'OPTIONS'",
		"'TIMEOUT'", "'DISTINCT'", "'FILTER'", "'CURRENT'", "'SORT'", "'LIMIT'",
		"'LET'", "'COLLECT'", "", "'NONE'", "'NULL'", "", "'USE'", "'INTO'",
		"'KEEP'", "'WITH'", "'COUNT'", "'ALL'", "'ANY'", "'AGGREGATE'", "'EVENT'",
		"'LIKE'", "", "'IN'", "'DO'", "'WHILE'", "'@'",
	}
	staticData.symbolicNames = []string{
		"", "MultiLineComment", "SingleLineComment", "WhiteSpaces", "LineTerminator",
		"Colon", "SemiColon", "Dot", "Comma", "OpenBracket", "CloseBracket",
		"OpenParen", "CloseParen", "OpenBrace", "CloseBrace", "Gt", "Lt", "Eq",
		"Gte", "Lte", "Neq", "Multi", "Div", "Mod", "Plus", "Minus", "MinusMinus",
		"PlusPlus", "And", "Or", "Range", "Assign", "QuestionMark", "RegexNotMatch",
		"RegexMatch", "For", "Return", "Waitfor", "Dispatch", "Options", "Timeout",
		"Distinct", "Filter", "Current", "Sort", "Limit", "Let", "Collect",
		"SortDirection", "None", "Null", "BooleanLiteral", "Use", "Into", "Keep",
		"With", "Count", "All", "Any", "Aggregate", "Event", "Like", "Not",
		"In", "Do", "While", "Param", "Identifier", "IgnoreIdentifier", "StringLiteral",
		"IntegerLiteral", "FloatLiteral", "NamespaceSegment", "UnknownIdentifier",
	}
	staticData.ruleNames = []string{
		"program", "head", "useExpression", "use", "body", "bodyStatement",
		"bodyExpression", "variableDeclaration", "returnExpression", "forExpression",
		"forExpressionSource", "forExpressionClause", "forExpressionStatement",
		"forExpressionBody", "forExpressionReturn", "filterClause", "limitClause",
		"limitClauseValue", "sortClause", "sortClauseExpression", "collectClause",
		"collectSelector", "collectGrouping", "collectAggregator", "collectAggregateSelector",
		"collectGroupVariable", "collectCounter", "waitForExpression", "dispatchEventExpression",
		"eventName", "eventSource", "eventArguments", "optionsClause", "timeoutClause",
		"param", "variable", "literal", "arrayLiteral", "objectLiteral", "booleanLiteral",
		"stringLiteral", "floatLiteral", "integerLiteral", "noneLiteral", "propertyAssignment",
		"computedPropertyName", "propertyName", "namespaceIdentifier", "namespace",
		"memberExpression", "memberExpressionSource", "functionCallExpression",
		"functionCall", "functionName", "argumentList", "memberExpressionPath",
		"safeReservedWord", "unsafeReservedWord", "rangeOperator", "rangeOperand",
		"expression", "predicate", "expressionAtom", "arrayOperator", "equalityOperator",
		"inOperator", "likeOperator", "unaryOperator", "regexpOperator", "logicalAndOperator",
		"logicalOrOperator", "multiplicativeOperator", "additiveOperator", "errorOperator",
	}
	staticData.predictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// FqlParserInit initializes any static state used to implement FqlParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewFqlParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func FqlParserInit() {
	staticData := &fqlparserParserStaticData
	staticData.once.Do(fqlparserParserInit)
}

// NewFqlParser produces a new parser instance for the optional input antlr.TokenStream.
func NewFqlParser(input antlr.TokenStream) *FqlParser {
	FqlParserInit()
	this := new(FqlParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &fqlparserParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.predictionContextCache)
	this.RuleNames = staticData.ruleNames
	this.LiteralNames = staticData.literalNames
	this.SymbolicNames = staticData.symbolicNames
	this.GrammarFileName = "FqlParser.g4"

	return this
}

// FqlParser tokens.
const (
	FqlParserEOF               = antlr.TokenEOF
	FqlParserMultiLineComment  = 1
	FqlParserSingleLineComment = 2
	FqlParserWhiteSpaces       = 3
	FqlParserLineTerminator    = 4
	FqlParserColon             = 5
	FqlParserSemiColon         = 6
	FqlParserDot               = 7
	FqlParserComma             = 8
	FqlParserOpenBracket       = 9
	FqlParserCloseBracket      = 10
	FqlParserOpenParen         = 11
	FqlParserCloseParen        = 12
	FqlParserOpenBrace         = 13
	FqlParserCloseBrace        = 14
	FqlParserGt                = 15
	FqlParserLt                = 16
	FqlParserEq                = 17
	FqlParserGte               = 18
	FqlParserLte               = 19
	FqlParserNeq               = 20
	FqlParserMulti             = 21
	FqlParserDiv               = 22
	FqlParserMod               = 23
	FqlParserPlus              = 24
	FqlParserMinus             = 25
	FqlParserMinusMinus        = 26
	FqlParserPlusPlus          = 27
	FqlParserAnd               = 28
	FqlParserOr                = 29
	FqlParserRange             = 30
	FqlParserAssign            = 31
	FqlParserQuestionMark      = 32
	FqlParserRegexNotMatch     = 33
	FqlParserRegexMatch        = 34
	FqlParserFor               = 35
	FqlParserReturn            = 36
	FqlParserWaitfor           = 37
	FqlParserDispatch          = 38
	FqlParserOptions           = 39
	FqlParserTimeout           = 40
	FqlParserDistinct          = 41
	FqlParserFilter            = 42
	FqlParserCurrent           = 43
	FqlParserSort              = 44
	FqlParserLimit             = 45
	FqlParserLet               = 46
	FqlParserCollect           = 47
	FqlParserSortDirection     = 48
	FqlParserNone              = 49
	FqlParserNull              = 50
	FqlParserBooleanLiteral    = 51
	FqlParserUse               = 52
	FqlParserInto              = 53
	FqlParserKeep              = 54
	FqlParserWith              = 55
	FqlParserCount             = 56
	FqlParserAll               = 57
	FqlParserAny               = 58
	FqlParserAggregate         = 59
	FqlParserEvent             = 60
	FqlParserLike              = 61
	FqlParserNot               = 62
	FqlParserIn                = 63
	FqlParserDo                = 64
	FqlParserWhile             = 65
	FqlParserParam             = 66
	FqlParserIdentifier        = 67
	FqlParserIgnoreIdentifier  = 68
	FqlParserStringLiteral     = 69
	FqlParserIntegerLiteral    = 70
	FqlParserFloatLiteral      = 71
	FqlParserNamespaceSegment  = 72
	FqlParserUnknownIdentifier = 73
)

// FqlParser rules.
const (
	FqlParserRULE_program                  = 0
	FqlParserRULE_head                     = 1
	FqlParserRULE_useExpression            = 2
	FqlParserRULE_use                      = 3
	FqlParserRULE_body                     = 4
	FqlParserRULE_bodyStatement            = 5
	FqlParserRULE_bodyExpression           = 6
	FqlParserRULE_variableDeclaration      = 7
	FqlParserRULE_returnExpression         = 8
	FqlParserRULE_forExpression            = 9
	FqlParserRULE_forExpressionSource      = 10
	FqlParserRULE_forExpressionClause      = 11
	FqlParserRULE_forExpressionStatement   = 12
	FqlParserRULE_forExpressionBody        = 13
	FqlParserRULE_forExpressionReturn      = 14
	FqlParserRULE_filterClause             = 15
	FqlParserRULE_limitClause              = 16
	FqlParserRULE_limitClauseValue         = 17
	FqlParserRULE_sortClause               = 18
	FqlParserRULE_sortClauseExpression     = 19
	FqlParserRULE_collectClause            = 20
	FqlParserRULE_collectSelector          = 21
	FqlParserRULE_collectGrouping          = 22
	FqlParserRULE_collectAggregator        = 23
	FqlParserRULE_collectAggregateSelector = 24
	FqlParserRULE_collectGroupVariable     = 25
	FqlParserRULE_collectCounter           = 26
	FqlParserRULE_waitForExpression        = 27
	FqlParserRULE_dispatchEventExpression  = 28
	FqlParserRULE_eventName                = 29
	FqlParserRULE_eventSource              = 30
	FqlParserRULE_eventArguments           = 31
	FqlParserRULE_optionsClause            = 32
	FqlParserRULE_timeoutClause            = 33
	FqlParserRULE_param                    = 34
	FqlParserRULE_variable                 = 35
	FqlParserRULE_literal                  = 36
	FqlParserRULE_arrayLiteral             = 37
	FqlParserRULE_objectLiteral            = 38
	FqlParserRULE_booleanLiteral           = 39
	FqlParserRULE_stringLiteral            = 40
	FqlParserRULE_floatLiteral             = 41
	FqlParserRULE_integerLiteral           = 42
	FqlParserRULE_noneLiteral              = 43
	FqlParserRULE_propertyAssignment       = 44
	FqlParserRULE_computedPropertyName     = 45
	FqlParserRULE_propertyName             = 46
	FqlParserRULE_namespaceIdentifier      = 47
	FqlParserRULE_namespace                = 48
	FqlParserRULE_memberExpression         = 49
	FqlParserRULE_memberExpressionSource   = 50
	FqlParserRULE_functionCallExpression   = 51
	FqlParserRULE_functionCall             = 52
	FqlParserRULE_functionName             = 53
	FqlParserRULE_argumentList             = 54
	FqlParserRULE_memberExpressionPath     = 55
	FqlParserRULE_safeReservedWord         = 56
	FqlParserRULE_unsafeReservedWord       = 57
	FqlParserRULE_rangeOperator            = 58
	FqlParserRULE_rangeOperand             = 59
	FqlParserRULE_expression               = 60
	FqlParserRULE_predicate                = 61
	FqlParserRULE_expressionAtom           = 62
	FqlParserRULE_arrayOperator            = 63
	FqlParserRULE_equalityOperator         = 64
	FqlParserRULE_inOperator               = 65
	FqlParserRULE_likeOperator             = 66
	FqlParserRULE_unaryOperator            = 67
	FqlParserRULE_regexpOperator           = 68
	FqlParserRULE_logicalAndOperator       = 69
	FqlParserRULE_logicalOrOperator        = 70
	FqlParserRULE_multiplicativeOperator   = 71
	FqlParserRULE_additiveOperator         = 72
	FqlParserRULE_errorOperator            = 73
)

// IProgramContext is an interface to support dynamic dispatch.
type IProgramContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsProgramContext differentiates from other interfaces.
	IsProgramContext()
}

type ProgramContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProgramContext() *ProgramContext {
	var p = new(ProgramContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = FqlParserRULE_program
	return p
}

func (*ProgramContext) IsProgramContext() {}

func NewProgramContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProgramContext {
	var p = new(ProgramContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = FqlParserRULE_program

	return p
}

func (s *ProgramContext) GetParser() antlr.Parser { return s.parser }

func (s *ProgramContext) Body() IBodyContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IBodyContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IBodyContext)
}

func (s *ProgramContext) AllHead() []IHeadContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IHeadContext); ok {
			len++
		}
	}

	tst := make([]IHeadContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IHeadContext); ok {
			tst[i] = t.(IHeadContext)
			i++
		}
	}

	return tst
}

func (s *ProgramContext) Head(i int) IHeadContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IHeadContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IHeadContext)
}

func (s *ProgramContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProgramContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProgramContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FqlParserListener); ok {
		listenerT.EnterProgram(s)
	}
}

func (s *ProgramContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FqlParserListener); ok {
		listenerT.ExitProgram(s)
	}
}

func (s *ProgramContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case FqlParserVisitor:
		return t.VisitProgram(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *FqlParser) Program() (localctx IProgramContext) {
	this := p
	_ = this

	localctx = NewProgramContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, FqlParserRULE_program)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(151)
	p.GetErrorHandler().Sync(p)
	_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 0, p.GetParserRuleContext())

	for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		if _alt == 1 {
			{
				p.SetState(148)
				p.Head()
			}

		}
		p.SetState(153)
		p.GetErrorHandler().Sync(p)
		_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 0, p.GetParserRuleContext())
	}
	{
		p.SetState(154)
		p.Body()
	}

	return localctx
}

// IHeadContext is an interface to support dynamic dispatch.
type IHeadContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsHeadContext differentiates from other interfaces.
	IsHeadContext()
}

type HeadContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyHeadContext() *HeadContext {
	var p = new(HeadContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = FqlParserRULE_head
	return p
}

func (*HeadContext) IsHeadContext() {}

func NewHeadContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *HeadContext {
	var p = new(HeadContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = FqlParserRULE_head

	return p
}

func (s *HeadContext) GetParser() antlr.Parser { return s.parser }

func (s *HeadContext) UseExpression() IUseExpressionContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IUseExpressionContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IUseExpressionContext)
}

func (s *HeadContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *HeadContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *HeadContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FqlParserListener); ok {
		listenerT.EnterHead(s)
	}
}

func (s *HeadContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FqlParserListener); ok {
		listenerT.ExitHead(s)
	}
}

func (s *HeadContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case FqlParserVisitor:
		return t.VisitHead(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *FqlParser) Head() (localctx IHeadContext) {
	this := p
	_ = this

	localctx = NewHeadContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, FqlParserRULE_head)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(156)
		p.UseExpression()
	}

	return localctx
}

// IUseExpressionContext is an interface to support dynamic dispatch.
type IUseExpressionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsUseExpressionContext differentiates from other interfaces.
	IsUseExpressionContext()
}

type UseExpressionContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyUseExpressionContext() *UseExpressionContext {
	var p = new(UseExpressionContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = FqlParserRULE_useExpression
	return p
}

func (*UseExpressionContext) IsUseExpressionContext() {}

func NewUseExpressionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *UseExpressionContext {
	var p = new(UseExpressionContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = FqlParserRULE_useExpression

	return p
}

func (s *UseExpressionContext) GetParser() antlr.Parser { return s.parser }

func (s *UseExpressionContext) Use() IUseContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IUseContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IUseContext)
}

func (s *UseExpressionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *UseExpressionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *UseExpressionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FqlParserListener); ok {
		listenerT.EnterUseExpression(s)
	}
}

func (s *UseExpressionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FqlParserListener); ok {
		listenerT.ExitUseExpression(s)
	}
}

func (s *UseExpressionContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case FqlParserVisitor:
		return t.VisitUseExpression(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *FqlParser) UseExpression() (localctx IUseExpressionContext) {
	this := p
	_ = this

	localctx = NewUseExpressionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, FqlParserRULE_useExpression)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(158)
		p.Use()
	}

	return localctx
}

// IUseContext is an interface to support dynamic dispatch.
type IUseContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsUseContext differentiates from other interfaces.
	IsUseContext()
}

type UseContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyUseContext() *UseContext {
	var p = new(UseContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = FqlParserRULE_use
	return p
}

func (*UseContext) IsUseContext() {}

func NewUseContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *UseContext {
	var p = new(UseContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = FqlParserRULE_use

	return p
}

func (s *UseContext) GetParser() antlr.Parser { return s.parser }

func (s *UseContext) Use() antlr.TerminalNode {
	return s.GetToken(FqlParserUse, 0)
}

func (s *UseContext) NamespaceIdentifier() INamespaceIdentifierContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(INamespaceIdentifierContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(INamespaceIdentifierContext)
}

func (s *UseContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *UseContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *UseContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FqlParserListener); ok {
		listenerT.EnterUse(s)
	}
}

func (s *UseContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FqlParserListener); ok {
		listenerT.ExitUse(s)
	}
}

func (s *UseContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case FqlParserVisitor:
		return t.VisitUse(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *FqlParser) Use() (localctx IUseContext) {
	this := p
	_ = this

	localctx = NewUseContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, FqlParserRULE_use)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(160)
		p.Match(FqlParserUse)
	}
	{
		p.SetState(161)
		p.NamespaceIdentifier()
	}

	return localctx
}

// IBodyContext is an interface to support dynamic dispatch.
type IBodyContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsBodyContext differentiates from other interfaces.
	IsBodyContext()
}

type BodyContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyBodyContext() *BodyContext {
	var p = new(BodyContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = FqlParserRULE_body
	return p
}

func (*BodyContext) IsBodyContext() {}

func NewBodyContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *BodyContext {
	var p = new(BodyContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = FqlParserRULE_body

	return p
}

func (s *BodyContext) GetParser() antlr.Parser { return s.parser }

func (s *BodyContext) BodyExpression() IBodyExpressionContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IBodyExpressionContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IBodyExpressionContext)
}

func (s *BodyContext) AllBodyStatement() []IBodyStatementContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IBodyStatementContext); ok {
			len++
		}
	}
